# bridge-casper-smart-contracts

./: .gitignore  Makefile  README.md
.github/workflows/: build.yml
contract/: Cargo.toml
contract/src/: address.rs  bridge_pool_contract.rs  consts.rs  data.rs  detail.rs  error.rs  event.rs  lib.rs  main.rs
counter-call/: Cargo.toml
counter-call/src/: main.rs
erc20/erc20/: Cargo.toml
erc20/erc20-token/: Cargo.toml
erc20/erc20-token/src/: main.rs
erc20/erc20/src/: entry_points.rs  error.rs  lib.rs
tests/: Cargo.toml
tests/src/: integration_tests.rs
utils/contract-utils/: Cargo.toml
utils/contract-utils/src/: contract_storage.rs  keccak.rs  lib.rs
utils/test-env/: Cargo.toml
utils/test-env/src/: test_env.rs
