[package]
name = "bridge_pool"
version = "1.0.0"
authors = ["CasperLabs <https://discord.com/invite/Q38s3Vh>"]
edition = "2021"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
contract-utils = { path = "../utils/contract-utils" }
secp256k1 = { version = "0.19", features = ["recovery"] }
k256 = { version = "0.7.2", default-features = false, features = [
  "ecdsa",
  "zeroize",
] }

[[bin]]
name = "bridge_pool"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release] #reduces Wasm size
