[package]
name = "bridge_pool"
version = "1.0.0"
authors = ["CasperLabs <https://discord.com/invite/Q38s3Vh>"]
edition = "2021"

[dependencies]
casper-contract = "3.0.0"
casper-types = "3.0.0"
contract-utils = { path = "../utils/contract-utils" }
k256 = { version = "0.7.3", default-features = false, features = ["ecdsa", "zeroize", "keccak256"] }
sha3 = "*"
hex = "0.4.3"
secp256k1 = {version = "0.27", features = ["recovery"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
getrandom = { version = "=0.2.7", features = ["js"]}

[[bin]]
name = "bridge_pool"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release] #reduces Wasm size
codegen-units = 1
lto = true

[features]
default = ["std"]
std = ["casper-contract/std"]

# default = []