[package]
name = "tests"
version = "1.0.0"
authors = ["CasperLabs <https://discord.com/invite/Q38s3Vh>"]
edition = "2021"

[dependencies]
casper-contract = { version = "1.4.4", default-features = false, features = [
  "test-support",
] }
casper-engine-test-support = { version = "2.1.0", features = ["test-support"] }
casper-execution-engine = "1.5.0"
casper-types = "1.5.0"
casper-hashing = "1.4.3"
test-env = { path = "../utils/test-env" }
contract-utils = { path = "../utils/contract-utils" }

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false

[features]
default = ["std"]
std = ["casper-contract/std"]
