[package]
name = "tests"
version = "1.0.0"
authors = ["CasperLabs <https://discord.com/invite/Q38s3Vh>"]
edition = "2021"

[dependencies]
casper-engine-test-support = { version = "2.2.0", features = ["test-support"] }
casper-execution-engine = "2.0.0"
casper-types = "1.5.0"
base64 = { version = "0.13.0" }
blake2 = { version = "0.9.0", default-features = false }
test-env = { path = "../utils/test-env" }
hex = "0.4.3"
contract-utils = { path = "../utils/contract-utils" }
k256 = { version = "0.7.3", default-features = false, features = ["ecdsa", "zeroize", "keccak256"] }

[[bin]]
name = "integration-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false
