[package]
name = "erc20-token"
authors = ["Michał Papierski <michal@casperlabs.io>"]
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "3.0.0"
casper-erc20 = { path = "../erc20" }
casper-types = "3.0.0"

[[bin]]
name = "erc20_token"
path = "src/main.rs"
bench = false
doctest = false
test = false
