[package]
name = "contract-utils"
version = "0.1.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
hex = { version = "0.4.3", default-features = false }
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
secp256k1 = {version = "0.19", features = ["recovery"]}
