[package]
name = "contract-utils"
version = "0.1.0"
authors = ["Maciej Zielinski <maciek.s.zielinski@gmail.com>"]
edition = "2018"

[dependencies]
casper-contract = "3.0.0"
casper-types = "3.0.0"
hex = { version = "0.4.3", default-features = false }
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
secp256k1 = {version = "0.27", features = ["recovery"] }
k256 = { version = "0.7.3", default-features = false, features = ["ecdsa", "zeroize", "keccak256"] }

[features]
default = ["std"]
std = ["casper-contract/std"]
